<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budgy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="myTrips">My Trips</string>
    <string name="newTrip">New Trip</string>
    <string name="tripName">Trip Name</string>
    <string name="tripDes">Description</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="title_activity_create_trip">CreateTripActivity</string>
    <string name="title_activity_trip_transactions">TripTransactionsActivity</string>
    <string name="transactions">Transactions</string>
    <string name="visualize">Visualize</string>
    <string name="inProgress">In Progress</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trip_detail">TripDetailActivity</string>
    <string name="title_section1">Transactions</string>
    <string name="title_section2">Visualize</string>
    <string name="title_section3">In Progress</string>
    <string name="newTransaction">New Transaction</string>
    <string name="transactionName">Transaction Name</string>
    <string name="transactionDes">Description</string>
    <string name="transactionCost">Total Cost</string>
    <string name="proposedBudget">Proposed Budget</string>
    <string name="budgetNum">0.00</string>
    <string name="dateFormat">mm/dd/yy</string>
    <string name="food">Food</string>
    <string name="spendingCategory">Spendings by Category</string>
    <string name="noTrips">You have no trips yet! Add a new trip.</string>
    <string name="paid">Paid?</string>
    <string name="transactionExampleName">Hat for Mom</string>
    <string name="transactionExampleDes">Ex: A Christmas Present!</string>
    <string name="transactionCategory">Category</string>
    <string name="payTo">Pay to:</string>
    <string name="delete">Delete</string>

</resources>
