<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/transactionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transactionName"/>

    <EditText
        android:id="@+id/transactionDes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/transactionDes"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"/>

    <EditText
        android:id="@+id/transactionCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transactionCost"/>



</LinearLayout>